--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -41,6 +41,7 @@
   border-radius: 5px
   margin: 0 auto 20px auto
   cursor: pointer
+  font-size: 13px
   &:hover
     -webkit-box-shadow: 0px 0px 10px 0px rgba(67,89,147,1)
     -moz-box-shadow: 0px 0px 10px 0px rgba(67,89,147,1)
