--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -161,7 +161,7 @@ form
   .info
     input
       width: 520px
-      height: 60px
+      height: 50px
     &-date-div
       font-size: 20px
       width: 320px
@@ -198,7 +198,8 @@ form
     span
       width: 120px
       padding: 0
-
+  .done
+    font-size: 16px
 
 @media screen and (min-width: 1024px)
   .info
